--- a/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.html
+++ b/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.html
@@ -4,6 +4,7 @@
                     (numberViewChange)="numberViewChangeListener($event)"></app-catalog-search>
 
 <div class="table-responsive" id="catalog-faculty">
+  <p>Tổng số: {{listParent.toArray().length}}</p>
   <table class="table table-bordered" [mfData]="listParent.toArray()" #mf="mfDataTable" [mfRowsOnPage]="numberShow">
     <thead>
     <tr>
