--- a/src/app/personnels/manager-personnels/role-manager/role-manager.component.html
+++ b/src/app/personnels/manager-personnels/role-manager/role-manager.component.html
@@ -36,7 +36,7 @@
         <span class="action-icon" title="Chi tiết " (click)="viewDetail(item)"><i class="fa fa-eye"
                                                                                   aria-hidden="true"></i></span>
         <span class="action-icon" title="Chỉnh sửa " (click)="editItem(item)"><i class="fa fa-edit"></i></span>
-        <!--<span class="action-icon" title="Xóa " (click)="removeItem(item)"><i class="fa fa-remove"></i></span>-->
+        <span class="action-icon" title="Xóa " (click)="removeItem(item)"><i class="fa fa-remove"></i></span>
       </td>
     </tr>
     <tr class="footer-table-pager">
