--- a/src/app/personnels/form.css
+++ b/src/app/personnels/form.css
@@ -92,6 +92,7 @@ input {
   padding-right: 10px;
   background-color: #ffffff;
   font-size: 16px;
+  font-weight: bold;
 }
 
 .form-control {
@@ -175,4 +176,11 @@ input.ng-valid {
 }
 h3{
   font-size: 20px;
+}
+
+.msg {
+  position: fixed;
+  z-index: 88;
+  width: 50%;
+  right: 25%;
 }
