--- a/src/app/personnels/info-person/process-evention/process-evention.component.html
+++ b/src/app/personnels/info-person/process-evention/process-evention.component.html
@@ -3,7 +3,7 @@
     Quá trình phát minh
   </div>
   <form action="" [formGroup]="formData">
-    <div class="action-form" style="margin-bottom: 10px;">
+    <div class="action-form" style="margin-bottom: 10px;" *ngIf="editEnable">
       <button (click)="onSave()">Ghi nhận</button>
       <div *ngIf="message.condition && formNotValid == false" [ngClass]="'alert alert-'+ message.type">
         {{message.content}}
@@ -19,8 +19,8 @@
           <th>Cơ quan cấp</th>
           <th>Ngày cấp</th>
           <th>Số tác giả</th>
-          <th>Diễn giải</th>
-          <th class="hide-print">
+          <th [style.textAlign]="!editEnable?'left':''">Diễn giải</th>
+          <th class="hide-print" *ngIf="editEnable">
             <span class="action-icon" (click)="openModals()"><i class="fa fa-plus"></i></span>
           </th>
         </tr>
@@ -33,8 +33,8 @@
           <td>{{item.organLicense}}</td>
           <td>{{item.dateOfIssue | date:'dd/MM/yyyy'}}</td>
           <td>{{item.numberAuthor}}</td>
-          <td>{{item.description}}</td>
-          <td class="hide-print">
+          <td [style.width]="!editEnable?'200px':''">{{item.description}}</td>
+          <td class="hide-print" *ngIf="editEnable">
             <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
             <!--<span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>-->
             <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = i"><i class="fa fa-remove "></i></span>
