--- a/src/app/personnels/info-person/publish-info/publish-info.component.html
+++ b/src/app/personnels/info-person/publish-info/publish-info.component.html
@@ -3,7 +3,7 @@
     Hoạt động xuất bản
   </div>
   <form>
-    <div class="action-form" style="margin-bottom: 10px;">
+    <div class="action-form" style="margin-bottom: 10px;" *ngIf="editEnable">
       <button (click)="onSave()">Ghi nhận</button>
       <div *ngIf="message.condition && formNotValid == false" [ngClass]="'alert alert-'+ message.type">
         {{message.content}}
@@ -17,8 +17,8 @@
           <th>Tên sách</th>
           <th>Năm xuất bản</th>
           <th>Nhà xuất bản</th>
-          <th>Vai trò</th>
-          <th class="hide-print">
+          <th [style.textAlign]="!editEnable?'left':''">Vai trò</th>
+          <th class="hide-print" *ngIf="editEnable">
             <span class="action-icon" (click)="openModals()"><i class="fa fa-plus"></i></span>
           </th>
         </tr>
@@ -30,8 +30,8 @@
           <td>{{item.name}}</td>
           <td>{{item.year}}</td>
           <td>{{item.publishCompany}}</td>
-          <td>{{item.role}}</td>
-          <td class="hide-print">
+          <td [style.width]="!editEnable?'200px':''">{{item.role}}</td>
+          <td class="hide-print" *ngIf="editEnable">
             <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
             <!--<span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>-->
             <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = i"><i class="fa fa-remove "></i></span>
