--- a/src/app/personnels/info-person/salary-brief/salary-brief.component.html
+++ b/src/app/personnels/info-person/salary-brief/salary-brief.component.html
@@ -3,7 +3,7 @@
     Lịch sử lương
   </div>
   <form [formGroup]="formMain">
-    <div class="action-form">
+    <div class="action-form" *ngIf="editEnable">
       <button (click)="onSave()">Ghi nhận</button>
       <div *ngIf="message.condition && formNotValid == false" [ngClass]="'alert alert-'+ message.type">
         {{message.content}}
@@ -27,7 +27,7 @@
                 <th>HSL</th>
                 <th>Số QD</th>
                 <!-- <th>Hiên tại</th> -->
-                <th class="hide-print"><span class="action-icon" (click)="openModals()"><i
+                <th class="hide-print" *ngIf="editEnable"><span class="action-icon" (click)="openModals()"><i
                   class="fa fa-plus"></i></span></th>
               </tr>
               </thead>
@@ -44,7 +44,7 @@
                 <!-- <td>
                   <input type="radio" style="width: auto" formControlName="now" [value]="i">
                 </td> -->
-                <td class="hide-print">
+                <td class="hide-print" *ngIf="editEnable">
                   <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
                   <!--<span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove"></i></span>-->
                   <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = i"><i class="fa fa-remove "></i></span>
