--- a/src/app/personnels/info-person/science-topic/science-topic.component.html
+++ b/src/app/personnels/info-person/science-topic/science-topic.component.html
@@ -3,7 +3,7 @@
     Đề tài - dự án khoa học
   </div>
   <form>
-    <div class="action-form" style="margin-bottom: 10px;">
+    <div class="action-form" style="margin-bottom: 10px;" *ngIf="editEnable">
       <button (click)="onSave()">Ghi nhận</button>
       <!--<button (click)="blockData()">Khóa dữ liệu</button>-->
       <div *ngIf="message.condition && formNotValid == false" [ngClass]="'alert alert-'+ message.type">
@@ -24,7 +24,7 @@
               <th>Vai trò trong đề tài</th>
               <th>Cấp đề tài</th>
               <th>Đánh giá loại</th>
-              <th class="hide-print">
+              <th class="hide-print" *ngIf="editEnable">
                 <span class="action-icon" (click)="openModals()"><i class="fa fa-plus"></i></span>
               </th>
             </tr>
@@ -40,7 +40,7 @@
               <td>{{item.role}}</td>
               <td>{{item.level}}</td>
               <td>{{item.specieObtain}}</td>
-              <td class="hide-print">
+              <td class="hide-print" *ngIf="editEnable">
                 <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
                 <!--<span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>-->
                 <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = i"><i class="fa fa-remove "></i></span>
