--- a/src/app/personnels/info-person/thesis-guide/thesis-guide.component.html
+++ b/src/app/personnels/info-person/thesis-guide/thesis-guide.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <form>
-    <div class="action-form" style="margin-bottom: 10px;">
+    <div class="action-form" style="margin-bottom: 10px;" *ngIf="editEnable">
       <button (click)="onSave()">Ghi nhận</button>
       <div *ngIf="message.condition && formNotValid == false" [ngClass]="'alert alert-'+ message.type">
         {{message.content}}
@@ -22,7 +22,7 @@
           <th>Tên luận văn/luận án</th>
           <th>Vai trò</th>
           <th>Đạt loại</th>
-          <th class="hide-print">
+          <th class="hide-print" *ngIf="editEnable">
             <span class="action-icon" (click)="openModals()"><i class="fa fa-plus"></i></span>
           </th>
         </tr>
@@ -36,7 +36,7 @@
           <td>{{item.thesisName}}</td>
           <td>{{item.role}}</td>
           <td>{{item.speciesObtain}}</td>
-          <td class="hide-print">
+          <td class="hide-print" *ngIf="editEnable">
             <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
             <!--<span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>-->
             <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = i"><i class="fa fa-remove "></i></span>
