--- a/src/assets/css/print/cv-print.css
+++ b/src/assets/css/print/cv-print.css
@@ -71,10 +71,10 @@ td {
 }
 
 .item-title {
-  display: block;
-  width: 500px;
-  margin-left: auto;
-  margin-right: auto;
+  /*display: block;*/
+  /*width: 500px;*/
+  /*margin-left: auto;*/
+  /*margin-right: auto;*/
   text-align: left;
 }
 
