--- a/src/app/personnels/manager-personnels/role-manager/role-manager.component.html
+++ b/src/app/personnels/manager-personnels/role-manager/role-manager.component.html
@@ -31,12 +31,12 @@
       <td class="name" (click)="viewDetail(item)">{{item.title}}</td>
       <td class="name" (click)="viewDetail(item)">{{item.description}}</td>
       <td class="name" (click)="viewDetail(item)">{{item.activated?'Activated':'Not Activated'}}</td>
-      <td class="name" (click)="viewDetail(item)">{{item.createdOn | date:'hh:MM:ss dd/MM/yyyy'}}</td>
+      <td class="name" (click)="viewDetail(item)">{{item.createdOn | date:'HH:MM:ss dd/MM/yyyy'}}</td>
       <td style="width:10%">
         <span class="action-icon" title="Chi tiết " (click)="viewDetail(item)"><i class="fa fa-eye"
                                                                                   aria-hidden="true"></i></span>
         <span class="action-icon" title="Chỉnh sửa " (click)="editItem(item)"><i class="fa fa-edit"></i></span>
-        <span class="action-icon" title="Xóa " (click)="removeItem(item)"><i class="fa fa-remove"></i></span>
+        <!--<span class="action-icon" title="Xóa " (click)="removeItem(item)"><i class="fa fa-remove"></i></span>-->
       </td>
     </tr>
     <tr class="footer-table-pager">
